--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><img src="assets/logo.png" alt="LATO RP" style="height: 50px;"></div>
+    <div class="logo">LATO RP</div>
     <nav>
       <ul>
         <li><a href="#regulamin">Regulamin</a></li>
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section class="hero" style="background-image: url('assets/hero-bg.jpg'); background-size: cover; background-position: center; color: white; text-shadow: 1px 1px 4px black;">
+  <section class="hero">
     <h1>Witamy na LATO RP</h1>
     <p>Realistyczny świat RP inspirowany klimatem GTA V i słonecznym latem. Dołącz do nas już dziś!</p>
     <button onclick="joinDiscord()">Dołącz do Discorda</button>
