--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LATO RP - Oficjalna Strona</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
 </head>
 <body>
   <header>
@@ -24,7 +23,7 @@
   <section class="hero">
     <h1>Witamy na LATO RP</h1>
     <p>Realistyczny świat RP inspirowany klimatem GTA V i słonecznym latem. Dołącz do nas już dziś!</p>
-    <button onclick="joinDiscord()">Dołącz do Discorda</button>
+    <button onclick="window.open('https://discord.gg/latorp', '_blank')">Dołącz do Discorda</button>
   </section>
 
   <section class="lore">
