--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -5,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LATO RP - Oficjalna Strona</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header>
-    <div class="logo">LATO RP</div>
+    <div class="logo">
+      <img src="assets/logo.png" alt="LATO RP Logo">
+    </div>
     <nav>
       <ul>
         <li><a href="#regulamin">Regulamin</a></li>
@@ -20,10 +24,12 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Witamy na LATO RP</h1>
-    <p>Realistyczny świat RP inspirowany klimatem GTA V i słonecznym latem. Dołącz do nas już dziś!</p>
-    <button onclick="window.open('https://discord.gg/latorp', '_blank')">Dołącz do Discorda</button>
+  <section class="hero" style="background-image: url('assets/strona.png'); background-size: cover; background-position: center; height: 500px;">
+    <div class="hero-content" style="text-align: center; padding-top: 150px; color: white; text-shadow: 2px 2px 4px #000;">
+      <h1>Witamy na LATO RP</h1>
+      <p>Realistyczny świat RP inspirowany klimatem GTA V i słonecznym latem.</p>
+      <button onclick="joinDiscord()">Dołącz do Discorda</button>
+    </div>
   </section>
 
   <section class="lore">
